# Portfolio

./: .flake8  CHANGELOG.md  README.md  dev.tchx84.Portfolio.json  meson.build  meson_options.txt  qa-requirements.txt  qa.sh
.github/workflows/: CI.yml  qa.yml
data/: dev.tchx84.Portfolio.appdata.xml.in  dev.tchx84.Portfolio.desktop.in  dev.tchx84.Portfolio.gschema.xml  dev.tchx84.Portfolio.metainfo.xml.in  dev.tchx84.Portfolio.rules  dev.tchx84.Portfolio.service.in  meson.build
po/: LINGUAS  POTFILES  ar.po  cs.po  de.po  es.po  fa.po  fr.po  he.po  hi.po  id.po  meson.build  nl.po  portfolio.pot  pt_BR.po  sv.po  tr.po  zh_CN.po
qa/: test.sh
src/: __init__.py  about.py  about.ui  bookmarks.py  cache.py  dev.tchx84.Portfolio.in  devices.py  files.py  files.ui  loading.py  loading.ui  main.css  main.py  menu.py  menu.ui  meson.build  operation.py  org.freedesktop.FileManager1.xml  passphrase.py  passphrase.ui  place.py  place.ui  placeholder.py  placeholder.ui  places.py  popup.py  popup.ui  portfolio.gresource.xml  properties.py  properties.ui  row.py  row.ui  service.py  settings.py  style.css  translation.py  trash.py  utils.py  window.py  window.ui  (+1 more)
tests/: meson.build  requirements.json  requirements.txt  service.py.in  window.py.in  worker.py.in
